@@ -17,6 +17,15 @@
 # @param stunnel_port [Port] The port upon which Stunnel should listen for
 #   connections.
 #
+# @param stunnel_connect [Array[Simplib::Port]] Address and port to which to
+#   **forward** connections
+#
+# @param stunnel_accept [String] Address and port upon which to **accept**
+#   connections
+#
+# @param stunnel_client [Boolean] Indicates that this connection is a client
+#   connection
+#
 # @param listen_address [IPAddress] The IP Address upon which to listen. Set to
 #   0.0.0.0 to listen on all addresses.
 #
@@ -29,11 +38,14 @@
 #   allowed to connect to this service.
 #
 class rsync::server (
-  Boolean          $stunnel            = simplib::lookup('simp_options::stunnel', { default_value => true }),
-  Simplib::Port    $stunnel_port       = 8730,
-  Simplib::IP      $listen_address     = '0.0.0.0',
-  Boolean          $drop_rsyslog_noise = true,
-  Simplib::Netlist $trusted_nets       = simplib::lookup('simp_options::trusted_nets', { default_value => ['127.0.0.1'] })
+  Simplib::IP          $listen_address     = '0.0.0.0',
+  Boolean              $stunnel            = simplib::lookup('simp_options::stunnel', { default_value => true }),
+  Simplib::Port        $stunnel_port       = 8730,
+  Array[Simplib::Port] $stunnel_connect    = [873],
+  String               $stunnel_accept     = "${listen_address}:${stunnel_port}",
+  Boolean              $stunnel_client     = false,
+  Boolean              $drop_rsyslog_noise = true,
+  Simplib::Netlist     $trusted_nets       = simplib::lookup('simp_options::trusted_nets', { default_value => ['127.0.0.1'] })
 ) {
   include '::rsync'
   include '::rsync::server::global'
@@ -47,9 +59,9 @@ class rsync::server (
     include '::stunnel'
 
     stunnel::connection { 'rsync':
-      connect      => [873],
-      accept       => "${listen_address}:${stunnel_port}",
-      client       => false,
+      connect      => $stunnel_connect,
+      accept       => $stunnel_accept,
+      client       => $stunnel_client,
       trusted_nets => $trusted_nets
     }
   }
